manifests/tcc-manifests/Video-server/svc-video-server-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-video-server-http
spec:
  selector: 
    app: video-server
  ports:
  - name: http
    port: 8081
    targetPort: 80
  type: ClusterIP
