manifests/tcc-manifests/Video-server/svc-video-server-rtmp.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-video-server-rtmp
spec:
  selector: 
    app: video-server
  ports:
  - name: rtmp
    port: 1935
    targetPort: 1935
  type: ClusterIP
